[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/UI/Inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/UI/StartScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI/Decision.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/Attack Buttons.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI/CharacterChoise.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/DoorScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Stuff/Main.gd" type="Script" id=7]
[ext_resource path="res://scenes/UI/TwoChoise.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/UI/Fighting/FightScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/UI/CharacterSelectScreen/CharSelectScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/UI/Fighting/WinSzene.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/UI/Fighting/LoseSzene.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/UI/merchantScene.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/UI/Inventory/GoldSign.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/UI/Inventory/DecriptinText.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/UI/Rooms/mercenario.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/UI/LoadOut.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/images/Icons/Armor/yellow_40.png" type="Texture" id=18]
[ext_resource path="res://Assets/images/Icons/Armor/red_31.PNG" type="Texture" id=19]
[ext_resource path="res://Assets/images/Icons/Armor/TradingIcons_111.PNG" type="Texture" id=20]
[ext_resource path="res://scenes/Stuff/AudioStreamPlayer.tscn" type="PackedScene" id=21]

[node name="Main" type="Node"]
script = ExtResource( 7 )
doorFight = ExtResource( 19 )
doorMercio = ExtResource( 18 )
doorMerchant = ExtResource( 20 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_right = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadOut" parent="Control/VBoxContainer" instance=ExtResource( 17 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0

[node name="FightScene" parent="Control/VBoxContainer" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
margin_right = 1080.0
margin_bottom = 960.0

[node name="DoorScene" parent="Control/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 1200.0
rect_min_size = Vector2( 540, 1200 )

[node name="merchant" parent="Control/VBoxContainer" instance=ExtResource( 13 )]
visible = false
anchor_right = 0.0
margin_right = 1080.0
margin_bottom = 720.0

[node name="DecriptinText" parent="Control/VBoxContainer" instance=ExtResource( 15 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 240.0

[node name="CharacterChoise2" parent="Control/VBoxContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
margin_top = 964.0
margin_right = 1080.0
margin_bottom = 1204.0
rect_min_size = Vector2( 0, 240 )

[node name="inventory" parent="Control/VBoxContainer" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1208.0
margin_right = 1080.0
margin_bottom = 1208.0

[node name="AttackButtons" parent="Control/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 1080.0
margin_bottom = 720.0
rect_clip_content = true

[node name="Decision" parent="Control/VBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
margin_right = 1080.0

[node name="TwoChoise" parent="Control/VBoxContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 720.0

[node name="mercenario" parent="Control" instance=ExtResource( 16 )]
visible = false

[node name="GoldSign" parent="Control" instance=ExtResource( 14 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 883.841
margin_top = 1.0
margin_right = 1183.84
margin_bottom = 121.0

[node name="WinSzene" parent="Control" instance=ExtResource( 11 )]
visible = false

[node name="LoseSzene" parent="Control" instance=ExtResource( 12 )]
visible = false

[node name="CharSelectScreen" parent="Control" instance=ExtResource( 10 )]
visible = false

[node name="Start" parent="Control" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 1920.0

[node name="AudioEffectStreamPlayer" parent="." instance=ExtResource( 21 )]
[connection signal="endFight" from="Control/VBoxContainer/FightScene" to="." method="_on_FightScene_endFight"]
[connection signal="loadAttacks" from="Control/VBoxContainer/FightScene" to="Control/VBoxContainer/AttackButtons" method="_on_FightScene_loadAttacks"]
[connection signal="playSound" from="Control/VBoxContainer/FightScene" to="AudioEffectStreamPlayer" method="_on_FightScene_playSound"]
[connection signal="door_enter" from="Control/VBoxContainer/DoorScene" to="." method="_on_DoorScene_door_enter"]
[connection signal="char_selected" from="Control/VBoxContainer/CharacterChoise2" to="." method="_on_CharacterChoise_char_selected"]
[connection signal="inventoryButton" from="Control/VBoxContainer/inventory" to="." method="_on_inventory_inventoryButton"]
[connection signal="attack" from="Control/VBoxContainer/AttackButtons" to="." method="_on_AttackButtons_attack"]
[connection signal="attack" from="Control/VBoxContainer/AttackButtons" to="Control/VBoxContainer/FightScene" method="_on_AttackButtons_attack"]
[connection signal="choise_made" from="Control/VBoxContainer/TwoChoise" to="." method="_on_TwoChoise_choise_made"]
[connection signal="mercenario" from="Control/mercenario" to="." method="_on_mercenario_mercenario"]
[connection signal="winSzene" from="Control/WinSzene" to="." method="_on_WinSzene_winSzene"]
[connection signal="loseSzene" from="Control/LoseSzene" to="." method="_on_LoseSzene_loseSzene"]
[connection signal="Chosen" from="Control/CharSelectScreen" to="." method="_on_CharSelectScreen_Chosen"]
[connection signal="start_pressed" from="Control/Start" to="." method="_on_Start_start_pressed"]
